--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,6 @@
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
-
-    <script src="systemjs.config.js"></script>
     <script>
         System.import('main.js').catch(function(err) {
             console.error(err);
@@ -25,5 +22,6 @@
 <body>
     <app>Loading AppComponent content here ...</app>
 </body>
+<script src="build.js"></script>
 
 </html>
